--- a/src/components/QuantityPicker/QuantityPicker.scss
+++ b/src/components/QuantityPicker/QuantityPicker.scss
@@ -2,11 +2,14 @@
 @use "../../styles/partials/utilities/mixins" as *;
 
 .quantity {
-  &__decrease,
-  &__increase {
-    background-color: $bg-primary;
-    color: $text-primary;
-    padding: 0.8rem;
+
+  @include flex(center, center);
+  background-color: $bg-primary;
+  color: $text-primary;
+
+  &__btn {
+    @include flex(center, center);
+    padding: .75rem;
     border: none;
     cursor: pointer;
 
@@ -16,11 +19,12 @@
   }
 
   &__figure {
-    color: $text-primary;
-    padding: 0.8rem 0;
-    width: 2.5rem;
+    @include flex(center, center);
+    width: 1.75rem;
     border: none;
     background-color: $bg-primary;
     text-align: center;
+    position: relative;
+    left: .5rem;
   }
 }
